--- a/index.html
+++ b/index.html
@@ -167,9 +167,7 @@ I was the founder and team lead of SIGRS (Special Interest Group on Resource Sch
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2016.4-2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.3- 2017.8: &nbsp;&nbsp; Research Fellow and Project Director, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.9 - Present: &nbsp;&nbsp; Research Scientist, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.3 - 2018.2: &nbsp;&nbsp; Research Scientist and Project Director, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.11 - Present: &nbsp;&nbsp; Research Fellow, School of Computing, University of Leeds, UK&nbsp;&nbsp;</span></p>
 
