--- a/publications_topics.html
+++ b/publications_topics.html
@@ -140,6 +140,10 @@ ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="">[
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: System Fault-Tolerance and Reliability </span></p>
 
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[7] Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> PhD. thesis, Beihang University, China (with Honor) </span> &nbsp; &nbsp;</p> 
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong> and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[6] ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics </span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 23th IEEE International  Conference on Parallel and Distributed Systems (ICPADS 2017), Shenzhen, China </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xue Ouyang, Changjian Wang, <strong>Renyu Yang*</strong>, Paul Townend, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
@@ -167,6 +171,30 @@ Multi-Tenants Cloud Environments <a href="paper/hase2016.pdf">[paper]</a>&nbsp; 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[1] Fail at Scale  <a href="paper/ccfcomm2016.pdf">[article]</a>&nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Communications of CCF (in Chinese), Volume 12, Jan, page 86-92, 2016 </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Jin Ouyang, Chunming Hu&nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
+ 
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Big Data Management and Analysis </span></p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[4]  A Scalable lnternet-of-Vehicles Service over Joint Clouds  <a> [abstract] </a> <a href="">[poster]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 9th IEEE International Workshop on Joint Cloud Computing(JCC 2018), Bamberg, Germany  </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Yong Zhang, Mingming Zhang, Tianyu Wo, Xuelian Lin, <strong>Renyu Yang</strong>, Jie Xu. &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[3]  SMTP: An Optimized Storage Method for Vehicle Trajectory Data Exploiting Trajectory Patterns  &nbsp;  <a href="paper/hpcc2016.pdf">[paper]</a>&nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 18th IEEE International Conference on High Performance Computing and Communications (HPCC 2016), Sydney, Austrilia, 2016  &nbsp; &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Hailun Wang, Mingming Zhang, <strong>Renyu Yang</strong>, Xuelian Lin,Tianyu Wo, Rajiv Ranjan and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[2] ScalaRDF: a Distributed, Elastic and Scalable
+In-Memory RDF Triple Store &nbsp; <a href="paper/icpads2016.pdf">[paper]</a>&nbsp;</span></p>
+
+ <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">The 22th IEEE International  Conference on Parallel and Distributed Systems (ICPADS 2016), Wuhan, China, 2016  &nbsp; &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em>Chunming Hu, Xixu Wang, <strong>Renyu Yang</strong> and Tianyu Wo &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[1] A Method for Private Car Transportation Dispatching Based on a Passenger Demand Model  <a href="paper/iov2015.pdf">[paper]</a> <a href="http://link.springer.com/chapter/10.1007/978-3-319-27293-1_4/fulltext.html"> [link] </a> </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 2nd International Conference on Internet of Vehicles(IoV 2015), Springer, Chengdu, China, 2015  </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Wenbo Jiang, Tianyu Wo, Mingming Zhang, <strong>Renyu Yang</strong> and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
 
 
 
@@ -211,44 +239,11 @@ Renyu Yang</strong>, Jie Xu, Tianyu Wo&nbsp;</em></span>&nbsp;&nbsp; &nbsp;&nbsp
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
 
 
- <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Big Data Management and Analysis </span></p>
-
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[4]  A Scalable lnternet-of-Vehicles Service over Joint Clouds  <a> [abstract] </a> <a href="">[poster]</a>  &nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 9th IEEE International Workshop on Joint Cloud Computing(JCC 2018), Bamberg, Germany  </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Yong Zhang, Mingming Zhang, Tianyu Wo, Xuelian Lin, <strong>Renyu Yang</strong>, Jie Xu. &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
-
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[3]  SMTP: An Optimized Storage Method for Vehicle Trajectory Data Exploiting Trajectory Patterns  &nbsp;  <a href="paper/hpcc2016.pdf">[paper]</a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 18th IEEE International Conference on High Performance Computing and Communications (HPCC 2016), Sydney, Austrilia, 2016  &nbsp; &nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Hailun Wang, Mingming Zhang, <strong>Renyu Yang</strong>, Xuelian Lin,Tianyu Wo, Rajiv Ranjan and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
-
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[2] ScalaRDF: a Distributed, Elastic and Scalable
-In-Memory RDF Triple Store &nbsp; <a href="paper/icpads2016.pdf">[paper]</a>&nbsp;</span></p>
-
- <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">The 22th IEEE International  Conference on Parallel and Distributed Systems (ICPADS 2016), Wuhan, China, 2016  &nbsp; &nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em>Chunming Hu, Xixu Wang, <strong>Renyu Yang</strong> and Tianyu Wo &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
-
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[1] A Method for Private Car Transportation Dispatching Based on a Passenger Demand Model  <a href="paper/iov2015.pdf">[paper]</a> <a href="http://link.springer.com/chapter/10.1007/978-3-319-27293-1_4/fulltext.html"> [link] </a> </span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 2nd International Conference on Internet of Vehicles(IoV 2015), Springer, Chengdu, China, 2015  </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Wenbo Jiang, Tianyu Wo, Mingming Zhang, <strong>Renyu Yang</strong> and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
-  
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Thesis and Book Chapters</span></p>
-
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[1] Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice </span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> PhD. thesis, Beihang University, China (with Honor) </span> &nbsp; &nbsp;</p> 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong> and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
-
  
 
 
 
-
-
-
-
-
-
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> NOTE: * = corresponding author  </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by Nov. 5th, 2017 </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by April 5th, 2018 </span> &nbsp; &nbsp;</p>
 </body>
 </html>
