--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </table>
 </a> 
 
-<p class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  What's new </p>
+<p class="Bolder">&nbsp;&nbsp;&nbsp;  What's new </p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/04/2018) The work of "ROSE: Cluster Resource Scheduling via Speculative Over-subscription" is accepted as a full paper and will appear in IEEE ICDCS 2018. Big Congrats!  </span></p>
 
@@ -136,7 +136,7 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Check more previous events in <a href="news.html"> old events </a></span></p>
 
 
-<p class="Bolder">&nbsp;&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
+<p class="Bolder">&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Hi,All! I am currently a research fellow with the school of computing, University of Leeds, UK. 
 I am also an adjunct research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, Beihang University, China.
 At present, I am leading several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
@@ -151,27 +151,25 @@ I was the founder and team lead of SIGRS (Special Interest Group on Resource Sch
 </span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Academia & Industrial Experiences </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Education </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2007.9-2011.6: &nbsp;&nbsp; B.Sc. (Supervised by Dr. Tianyu Wo), Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2011.9-2017.1: &nbsp;&nbsp; Ph.D. (Supervised by Prof. Jie Xu), Beihang University, &nbsp;China &nbsp;&nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2011.9-2017.1: &nbsp;&nbsp; Ph.D. (Supervised by Prof. Jie Xu), Beihang University, China 
+&nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2012.10-2013.1: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2012.10-2013.1, 2013.12 and 2016.3: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2013.12 and 2016.3: &nbsp; Visiting Researcher, &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Academia & Industrial Experiences </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2014.2-2015.6: &nbsp;&nbsp; R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433"> Zhuo Zhang </a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b"> Chao Li </a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2014.2-2016.2: &nbsp;&nbsp; R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433"> Zhuo Zhang </a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b"> Chao Li </a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  2015.7-2016.2: &nbsp;&nbsp; R&D Intern (Mentored by Mr. Chao Li and Yihui Feng), Distributed Scheduling Group, ODPS, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2016.4-2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2016.4-2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.3 - 2018.2: &nbsp;&nbsp; Research Scientist and Project Director, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.11 - Present: &nbsp;&nbsp; Research Fellow, School of Computing, University of Leeds, UK&nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.12 - Present: &nbsp;&nbsp; Academic Consultant, <a href="http://www.edgetic.com/">Edgetic Limited.</a>, Leeds, UK &nbsp;&nbsp;</span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems for big data, cloud computing and IoT </span></p>
