--- a/services.html
+++ b/services.html
@@ -75,11 +75,11 @@
 <p><span class="Bolder">Services</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; <strong> External Reviewer </strong> of</span> :</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE DSN, IEEE SRDS, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE iVCE, IEEE CCDC, IEEE CSC etc.; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE iVCE, IEEE CCDC, IEEE CSC etc.; </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Transactions:  IEEE Trans. on Cloud Computing (TCC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. on Sustainable Computing; IEEE Trans. Dependable and Secure Computing(TDSC); IEEE IoT Journal, etc. 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Transactions:  IEEE Trans. on Cloud Computing (TCC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. on Sustainable Computing; IEEE Trans. Dependable and Secure Computing (TDSC); IEEE Trans. Services Computing (TSC); IEEE IoT Journal, etc. 
 </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Other Journals: Future Generation Computing Systems(FGCS);  ACM Computing Survey; Open Journal of Cloud Computing (OJCC);  Journal of Cloud Computing;  Journal of Information Science and Engineering, International Journal of Engineering Intelligent System;  </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Other Journals: Future Generation Computing Systems (FGCS);  ACM Computing Survey; Journal of Computer Science and Technology (JCST); Open Journal of Cloud Computing (OJCC);  Journal of Cloud Computing;  Journal of Information Science and Engineering, International Journal of Engineering Intelligent System;  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Conferences Organizer: </strong></span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Organizer: IEEE ISORC'2012, IEEE iVCE'2012, CoLaB Workshop'2012,CoLaB Workshop'2013, CoLaB Workshop'2014</span></p>
