--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 <style type="text/css">
@@ -96,7 +96,7 @@
 &nbsp;
 </div>
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp; "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Head of Scheduling Group, Research Scientist, Senior Developer, Edgetic Ltd., UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Head of Scheduling Group, Research Scientist, Developing Leader, Edgetic Ltd., UK </p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
 
 <!-- p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p -->
@@ -133,7 +133,7 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/04/2018) The work of "ROSE: Cluster Resource Scheduling via Speculative Over-subscription" is accepted as a full paper and will appear in IEEE ICDCS 2018. Big Congrats!  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/11/2017) I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017  for the key participating and contributions to the reliable resource management and scheduling. The joint project is led by Alibaba Cloud, Beihang University and Tsinghua University. </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/11/2017) I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 （2017中国电子学会科技进步特等奖） for the key participating and contributions to the reliable resource management and scheduling. The joint project is led by Alibaba Cloud, Beihang University and Tsinghua University. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Check more previous events in <a href="news.html"> old events </a></span></p>
 
@@ -242,7 +242,7 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[2017] <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 </p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[2017] <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (中国电子学会科技进步特等奖) </p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[2016] <strong> Outstanding Graduate Award </strong> of Beijing Graduates </p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[2013] <strong>Guanghua Scholarship Award </strong> for outstanding students 2013 </p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;[2013] <strong>&#8220;Best Paper Award&#8221;</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS 2013)</span></p>
