--- a/publications.html
+++ b/publications.html
@@ -97,7 +97,7 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c18] ROSE: Cluster Scheduling through Efficient Resource Overselling <a href="paper/sosp2017-abstract.pdf">[abstract] </a> <a href="paper/sosp2017-poster.pdf">[poster]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 26th ACM Symposium on Operating Systems Principles(SOSP 2017), poster session, Shanghai, China </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>, Peter Garraghan, Chao Li&nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c17] ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c17] ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics <a href="paper/icpads2017.pdf">[paper]</a>&nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 23th IEEE International  Conference on Parallel and Distributed Systems (ICPADS 2017), Shenzhen, China </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xue Ouyang, Changjian Wang, <strong>Renyu Yang*</strong>, Paul Townend, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
  
