--- a/publications_topics.html
+++ b/publications_topics.html
@@ -91,29 +91,19 @@
  
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Massive-scale Resource Management and Orchestration </span></p>
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[10]  
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[8]  
 ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="paper/icdcs2018.pdf">[paper]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria (to appear)</span> &nbsp; &nbsp;</p> 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>,Peter Garraghan, Tianyu Wo, Jie Xu, Jianyong Zhu, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[9] Intelligent Resource Scheduling: a Machine Learning Perspective  <a href="paper/sose2018.pdf">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[7] Intelligent Resource Scheduling: a Machine Learning Perspective  <a href="paper/sose2018.pdf">[paper]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 12th IEEE International Symposium on Service Oriented System Engineering(SOSE 2018), Bamberg, Germany  <span class="redmark">(Invited) </span></span>&nbsp;&nbsp; &nbsp;</p>
 
  <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Xue Ouyang,Yaofeng Chen, Paul Townend,  Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[8] ROSE: Cluster Scheduling through Efficient Resource Overselling <a href="paper/sosp2017-abstract.pdf">[abstract] </a> <a href="paper/sosp2017-poster.pdf">[poster]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[6] ROSE: Cluster Scheduling through Efficient Resource Overselling <a href="paper/sosp2017-abstract.pdf">[abstract] </a> <a href="paper/sosp2017-poster.pdf">[poster]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 26th ACM Symposium on Operating Systems Principles(SOSP 2017), poster session, Shanghai, China </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>, Peter Garraghan, Chao Li&nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
-
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[7] Cider: a Rapid Docker Container Deployment System through Sharing Network Storage
-<a href="paper/hpcc2017.pdf">[paper]</a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE 19th International Conference on High Performance Computing and Communications (HPCC 2017),Bangkok,Thailand </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Lian Du, Tianyu Wo, <strong>Renyu Yang*</strong>, Chunming Hu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
-
-
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[6] Software-Defined Storage in Joint Clouds
-		<a href="paper/ccfcomm2017.pdf">[article]</a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Communications of CCF (in Chinese), 2017 </span>&nbsp;&nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Tianyu Wo*,  Yuandong Wang, Chunming Hu and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[5] Fog Orchestration for IoT Services <a href="paper/ic2017.pdf">[paper]</a>&nbsp;</span></p>
@@ -145,7 +135,7 @@ ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="pap
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> PhD. thesis, Beihang University, China (with Honor) </span> &nbsp; &nbsp;</p> 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong> and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[6] ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[6] ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics <a href="paper/icpads2017.pdf">[paper]</a>&nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 23th IEEE International  Conference on Parallel and Distributed Systems (ICPADS 2017), Shenzhen, China </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xue Ouyang, Changjian Wang, <strong>Renyu Yang*</strong>, Paul Townend, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[5] Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7572191">[preprint]</a>&nbsp;
@@ -178,6 +168,15 @@ Multi-Tenants Cloud Environments <a href="paper/hase2016.pdf">[paper]</a>&nbsp; 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
  
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Big Data Management and Analysis </span></p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[6] Software-Defined Storage in Joint Clouds
+		<a href="paper/ccfcomm2017.pdf">[article]</a>&nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Communications of CCF (in Chinese), 2017 </span>&nbsp;&nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Tianyu Wo*,  Yuandong Wang, Chunming Hu and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[5] Cider: a Rapid Docker Container Deployment System through Sharing Network Storage
+<a href="paper/hpcc2017.pdf">[paper]</a>&nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE 19th International Conference on High Performance Computing and Communications (HPCC 2017),Bangkok,Thailand </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Lian Du, Tianyu Wo, <strong>Renyu Yang*</strong>, Chunming Hu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[4]  A Scalable lnternet-of-Vehicles Service over Joint Clouds  <a> [abstract] </a> <a href="">[poster]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 9th IEEE International Workshop on Joint Cloud Computing(JCC 2018), Bamberg, Germany  </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Yong Zhang, Mingming Zhang, Tianyu Wo, Xuelian Lin, <strong>Renyu Yang</strong>, Jie Xu. &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
