--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students within MSDS Research Team </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PostDoc researcher: Dr. Qi Shen (2017.9 - ) </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD students: Jianyong Zhu (2017.5 - ), Xianyong Yi (2018.9 - ) </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Junqing Xiao, Ximing Qu, Zhenping Li (2016.9 - ), Kaiyang Shao, Muqing Xian (2017.9 - )   </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Junqing Xiao, Ximing Qu (2016.9 - ), Kaiyang Shao (2017.9 - )   </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun (M.Sc, 2015-2018, now on leave for Ph.D study) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Lian Du (M.Sc, 2015-2018, first employment at Alibaba Cloud Inc.) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xixu Wang (M.Sc, 2014-2017, first employment at Baidu Inc.) </span></p> 
