--- a/publications_topics.html
+++ b/publications_topics.html
@@ -129,7 +129,7 @@ ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="pap
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
 
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: System Fault-Tolerance and Reliability </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Fault-Tolerance and Reliability in Scheduling </span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[7] Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice </span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> PhD. thesis, Beihang University, China (with Honor) </span> &nbsp; &nbsp;</p> 
@@ -167,7 +167,7 @@ Multi-Tenants Cloud Environments <a href="paper/hase2016.pdf">[paper]</a>&nbsp; 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
  
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Big Data Management and Analysis </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Big Data Management and Analytics </span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[6] Software-Defined Storage in Joint Clouds
 		<a href="paper/ccfcomm2017.pdf">[article]</a>&nbsp;</span></p>
