--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 &nbsp;
 </div>
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp; "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Head of Scheduling Group, Research Scientist, Developing Leader, Edgetic Ltd., UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Head of Scheduling Group, Research Scientist, Lead R&D Engineer, Edgetic Ltd., UK </p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
 
 <!-- p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p -->
@@ -133,7 +133,7 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/04/2018) The work of "ROSE: Cluster Resource Scheduling via Speculative Over-subscription" is accepted as a full paper and will appear in IEEE ICDCS 2018. Big Congrats!  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/11/2017) I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 （2017中国电子学会科技进步特等奖） for the key participating and contributions to the reliable resource management and scheduling. The joint project is led by Alibaba Cloud, Beihang University and Tsinghua University. </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/11/2017) I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 （2017中国电子学会科技进步特等奖） for the key participation and contributions to the reliable resource management and scheduling. The joint project is led by Alibaba Cloud, Beihang University and Tsinghua University. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Check more previous events in <a href="news.html"> old events </a></span></p>
 
@@ -145,7 +145,7 @@ I led several China national or international projects in terms of distributed r
 2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
 3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
 and 4) geo-distributed data processing, etc. 
-I has published more than 25 peer-reviewed papers in the field of distributed systems and cloud computing. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Services Computing, IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, ACM SOSP(poster), USENIX LISA, IEEE HASE, IEEE ICPADS etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participating and contributions to the reliable resource management and scheduling at massive scale.  
+I has published more than 25 peer-reviewed papers in the field of distributed systems and cloud computing. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Services Computing, IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, ACM SOSP(poster), USENIX LISA, IEEE HASE, IEEE ICPADS etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
 </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China  in June 2011 and January 2017 respectively.   In the past few years, I had been working both in the Networked Computing Group (NCG) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds.  I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and MSDS (Massive-Scale Distributed Systems) research group at Beihang University.  I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with the UK Computer Science community (such as University of Leeds, University of Edinburgh, Lancaster University etc.). During 2014 to 2016, I also joined Fuxi the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on cloud system issues at Internet scale.  I am a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>, IEEE and&nbsp;<a href="http://www.ccf.org.cn">CCF(China Computer Federation)</a>.
 </span></p>
@@ -167,9 +167,8 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2016.4-2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.3 - 2018.2: &nbsp;&nbsp; Research Scientist and Project Director, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.11 - Present: &nbsp;&nbsp; Research Fellow, School of Computing, University of Leeds, UK&nbsp;&nbsp;</span></p>
-
+ 
+ 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems for big data, cloud computing and IoT </span></p>
@@ -207,9 +206,9 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Projects</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [1] Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator, 2016.6 - present</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [1] Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  executive leader and coordinator, 2016.6 - 2018.5 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [2] Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, executive leader and coordinator, 2016.5 - present  </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [2] Storage Model and Mechanism for Joint Clouds (No. 2016YFB1000103), supported by National Key Research and Development Programme, executive leader and coordinator, 2016.5 - 2017.11  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [3] On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental  Research and Development Programme,  executive leader and coordinator, 2012.1 - 2015.9 </span></p>
 
