--- a/publications.html
+++ b/publications.html
@@ -82,7 +82,7 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018</span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c21]  ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="paper/icdcs2018.pdf">[paper]</a>  &nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria (to appear)</span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>,Peter Garraghan, Tianyu Wo, Jie Xu, Jianyong Zhu, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>,Peter Garraghan, Tianyu Wo, Jie Xu, Jianyong Zhu, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c20] Intelligent Resource Scheduling: a Machine Learning Perspective  <a href="paper/sose2018.pdf">[paper]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 12th IEEE International Symposium on Service Oriented System Engineering (SOSE 2018), Bamberg, Germany   </span>   <span class="red">(Invited) </span> </p>
@@ -113,7 +113,7 @@
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[j3] Fog Orchestration for IoT Services  <a href="paper/ic2017.pdf">[paper]</a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Internet Computing, 2017, IEEE Computer Society (SCI-IF = 1.713 and Q1) </span>  <span class="red">(One of Most Popular Articles) </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Internet Computing, 2017, IEEE Computer Society (SCI-IF = 1.929 and Q1) </span>  <span class="red">(One of Most Popular Articles) </span></p>
  <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Zhenyu Wen, <strong>Renyu Yang*</strong>, Peter Garraghan, Tao Lin, Jie Xu and Michael Rovatsos &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[b1] Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice </span></p>
@@ -138,13 +138,13 @@ Root-Cause Analysis in Cloud Datacenters  <a href="paper/dsn2016-abstract.pdf">[
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[j2] Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters  <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7572191">[preprint]</a>&nbsp;
 <a href="paper/tsc2016b.pdf">[paper]</a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Transactions on Services Computing (in press, SCI-IF = 3.520 and Q1) </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Transactions on Services Computing (SCI-IF = 4.418 and Q1) </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Peter Garraghan, Xue Ouyang, <strong>Renyu Yang*</strong>, David Mckee and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p> 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[j1] Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover
 <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7437494">[preprint]</a>&nbsp;
 <a href="paper/tsc2016.pdf">[paper] </a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Transactions on Services Computing (in press, SCI-IF = 3.520 and Q1) </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Transactions on Services Computing (SCI-IF = 4.418 and Q1) </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Yang Zhang, Peter Garraghan, Yihui Feng, Jin Ouyang, Jie Xu, Zhuo Zhang, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
