--- a/publications_topics.html
+++ b/publications_topics.html
@@ -93,7 +93,7 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[8]  
 ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="paper/icdcs2018.pdf">[paper]</a>  &nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria (to appear)</span> &nbsp; &nbsp;</p> 
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria </span> &nbsp; &nbsp;</p> 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>,Peter Garraghan, Tianyu Wo, Jie Xu, Jianyong Zhu, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[7] Intelligent Resource Scheduling: a Machine Learning Perspective  <a href="paper/sose2018.pdf">[paper]</a>  &nbsp;</span></p>
@@ -107,7 +107,7 @@ ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="pap
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[5] Fog Orchestration for IoT Services <a href="paper/ic2017.pdf">[paper]</a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Internet Computing, 2017, IEEE Computer Society (SCI-IF = 1.713 and Q1) </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Zhenyu Wen, <strong>Renyu Yang*</strong>, Peter Garraghan, Tao Lin, Jie Xu and Michael Rovatsos &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Internet Computing, 2017, IEEE Computer Society (SCI-IF = 1.929 and Q1) </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Zhenyu Wen, <strong>Renyu Yang*</strong>, Peter Garraghan, Tao Lin, Jie Xu and Michael Rovatsos &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[4] Computing at Massive Scale: Scalability and Dependability Challenges <a href="paper/sose2016.pdf">[paper]</a>&nbsp; <a href="talks/20160401_SOSE.pdf">[slides]</a> </span></p>
@@ -140,7 +140,7 @@ ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="pap
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[5] Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7572191">[preprint]</a>&nbsp;
 <a href="paper/tsc2016b.pdf">[paper]</a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Transactions on Services Computing, 2016 (in press, SCI-IF = 3.049 and Q1) </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Transactions on Services Computing, 2016 (SCI-IF = 4.418 and Q1) </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Peter Garraghan, Xue Ouyang, <strong>Renyu Yang*</strong>, David Mckee and Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[4] Reducing Late-Timing Failure at Scale: Straggler
@@ -151,7 +151,7 @@ Root-Cause Analysis in Cloud Datacenters  <a href="paper/dsn2016-abstract.pdf">[
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[3] Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover
 <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7437494">[preprint]</a>&nbsp;
 <a href="paper/tsc2016.pdf">[paper] </a>&nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Transactions on Services Computing, 2016 (in press, SCI-IF = 3.049 and Q1) </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Transactions on Services Computing, 2016 (SCI-IF = 4.418 and Q1) </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Yang Zhang, Peter Garraghan*, Yihui Feng, Jin Ouyang, Jie Xu, Zhuo Zhang, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[2] D2PS: a Dependable Data Provisioning Service in
