--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  What's new </p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (16/07/2018) I has been invited to serve as IEEE JCC 2019 PC co-chair. 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/04/2018) The work of "ROSE: Cluster Resource Scheduling via Speculative Over-subscription" is accepted as a full paper and will appear in IEEE ICDCS 2018. Big Congrats!  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/11/2017) I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 （2017中国电子学会科技进步特等奖） for the key participation and contributions to the reliable resource management and scheduling. The joint project is led by Alibaba Cloud, Beihang University and Tsinghua University. </span></p>
