--- a/publications.html
+++ b/publications.html
@@ -81,6 +81,9 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018</span></p>
 
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[j5]  Emergent Failures: Rethinking Reliable Cloud Datacenters at Scale <a href="">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Cloud Computing magazine, 2018, IEEE Computer Society (SCI-IF = 2.929)  </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Peter Garraghan, <strong>Renyu Yang*</strong>, Zhenyu Wen,  Alexander Romanovsky, Jie Xu, Rajkumar Buyya, Rajiv Ranjan &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c21]  ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="paper/icdcs2018.pdf">[paper]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>,Peter Garraghan, Tianyu Wo, Jie Xu, Jianyong Zhu, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
