--- a/services.html
+++ b/services.html
@@ -73,23 +73,29 @@
 <title> Renyu YANG's Services </title>
 <body>
 <p><span class="Bolder">Services</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; <strong> External Reviewer </strong> of</span> :</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE iVCE, IEEE CCDC, IEEE CSC etc.; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> PC Chair:</strong></span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE JCC 2019 (in conjuction with IEEE SOSE 2019)</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Transactions:  IEEE Trans. on Cloud Computing (TCC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. on Sustainable Computing; IEEE Trans. Dependable and Secure Computing (TDSC); IEEE Trans. Services Computing (TSC); IEEE IoT Journal, etc. 
-</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Other Journals: Future Generation Computing Systems (FGCS);  ACM Computing Survey; Journal of Computer Science and Technology (JCST); Open Journal of Cloud Computing (OJCC);  Journal of Cloud Computing;  Journal of Information Science and Engineering, International Journal of Engineering Intelligent System;  </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Publicity Chair: </strong> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Conferences Organizer: </strong></span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Organizer: IEEE ISORC'2012, IEEE iVCE'2012, CoLaB Workshop'2012,CoLaB Workshop'2013, CoLaB Workshop'2014</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> PC Member:</strong></span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE ESaaSA 2014 (in conjuction with IEEE CLOSER 2014)</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE ESaaSA 2014 (in conjuction with IEEE CLOSER 2014)</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE IWES 2014 (in conjuction with IEEE CloudCom 2014) </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE FiCloud 2016 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT 2016,2017,2018  (The IEEE/ACM International Conference on Big Data Computing, Applications and Technologies)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Publicity Chair: </strong> </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Conferences Organizer: </strong></span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Organizer: IEEE ISORC'2012, IEEE iVCE'2012, CoLaB Workshop'2012,CoLaB Workshop'2013, CoLaB Workshop'2014</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; <strong> External Reviewer </strong> of</span> :</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE iVCE, IEEE CCDC, IEEE CSC etc.; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Transactions:  IEEE Trans. on Cloud Computing (TCC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. on Sustainable Computing; IEEE Trans. Dependable and Secure Computing (TDSC); IEEE Trans. Services Computing (TSC); IEEE IoT Journal, etc.
+</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Other Journals: Future Generation Computing Systems (FGCS);  ACM Computing Survey; Journal of Computer Science and Technology (JCST); Open Journal of Cloud Computing (OJCC);  Journal of Cloud Computing;  Journal of Information Science and Engineering, International Journal of Engineering Intelligent System;  </span></p>
+
 
  
 <p>&nbsp; </p>
